# nl2sql

./: README.md  docker-compose.yml  pyproject.toml
assets/sample_csv/: db_info_assets_maintenance.csv  query_examples_asset_maintenance.csv  tb_details_Assets.csv  tb_details_Maintenance_Contracts.csv  tb_details_Third_Party_Companies.csv  tb_info_assets_maintenance.csv
assets/sample_cvs/: db_info_assets_maintenance.cvs  query_samples_asset_maintenance.cvs  tb_details_Assets.cvs  tb_details_Maintenance_Contracts.cvs  tb_details_Third_Party_Companies.cvs  tb_info_assets_maintenance.cvs
bizops/: config.py  main.py
bizops/controller/: assistant.py  db.py  file.py
bizops/pkg/: models.py
bizops/routers/: nl2sql.py  symantic_layer.py
bizops/services/: embedding.py  knowledge_graph.py  postgres.py  session_service.py  vector.py
bizops/services/agents/: context_agent.py  intention_agent.py  planner_agent.py
bizops/test/: test_nl2sql_api.py  test_upload_api.py
