[tool.poetry]
name = "nl2sql"
version = "0.1.0"
description = ""
authors = ["Jun Wan <wanjun81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.6"
uvicorn = "0.32.1"
pydantic = "2.9.2"
pydantic_settings = "2.7.0"
llama-index = "0.12.3"
llama-index-vector-stores-postgres = "0.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
